// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Group /> renders with children 1`] = `
<div
  className="sd-m-group sd-m-group--xs sd-m-group--align-left"
>
  <div>
    Children
  </div>
</div>
`;

exports[`<Group /> renders with column prop: with column prop 1`] = `
<div
  className="sd-m-group sd-m-group--xs sd-m-group--align-left sd-m-group--column"
/>
`;

exports[`<Group /> renders with default props 1`] = `
<div
  className="sd-m-group sd-m-group--xs sd-m-group--align-left"
/>
`;

exports[`<Group /> renders with equalSize prop: with inlineUniform prop 1`] = `
<div
  className="sd-m-group sd-m-group--xs sd-m-group--equal-size sd-m-group--align-left"
/>
`;

exports[`<Group /> renders with props 1`] = `
<div
  className="sd-m-group sd-m-group--m sd-m-group--inline sd-m-group--align-center sd-m-group--valign-center sd-m-group--full-height sd-m-grout-test"
  data-analytics-bannerid="dataAnalyticsBannerid"
  data-qa="dataQA"
/>
`;

exports[`<Group /> renders with wrap prop: with wrap prop 1`] = `
<div
  className="sd-m-group sd-m-group--xs sd-m-group--align-left sd-m-group--wrap-wrap-reverse"
/>
`;
